Bug 206666 - thumbnail borders are drawn inside instead of outside the images thus hiding parts of the image
Summary: thumbnail borders are drawn inside instead of outside the images thus hiding ...
Status: RESOLVED FIXED
Alias: None
Product: digikam
Classification: Applications
Component: Thumbs-RAW (other bugs)
Version First Reported In: 1.0.0
Platform: Debian testing Linux
: NOR normal
Target Milestone: ---
Assignee: Digikam Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-09-07 20:45 UTC by Johannes Tögel
Modified: 2017-07-27 10:56 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 1.0.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Johannes Tögel 2009-09-07 20:45:17 UTC
Version:           1.0.0-beta3 (using KDE 4.3.0)
OS:                Linux
Installed from:    Debian testing/unstable Packages

I have noticed that the borders that should be drawn around the thumbnails are instead drawn inside the thumbnails. This of course hides parts of the image, which seems negligible at first glance. 

The Problem is that this behaviour heavily impacts images with important objects near the edges, for example it's a huge difference if a person's head is "cut off" or still on the image. 

If someone needs to decide which images he should delete and which not, the thumbnails are very important source of information and should be as accurate as possible.


I therefore suggest that the borders are drawn outside of the thumbnails in future versions of digiKam. This would greatly improve the user experience for me and possibly for many others.
Comment 1 caulier.gilles 2009-09-07 21:07:39 UTC
If i remember, my code draw outside the image and do not crop contents...

Marcel, do you have changed something with QT4 model view port ?

Johannes, please test with beta4...

Gilles
Comment 2 Johannes Tögel 2009-09-07 21:31:24 UTC
I updated to beta4 and I've still got the same problem. It is noticeable especially well if the thumbnails are small. Just a minute and I'll provide a screenshot showing the problem.

Johannes

P.S.: Thanks for the immediate response!
Comment 3 Johannes Tögel 2009-09-07 21:53:34 UTC
Here is the Screenshot (edited a bit for easier recognition of the problem)

http://picfront.de/d/KQOTgf2q4/digikam_croppedthumbnails.jpg


The second thumbnail under the digikam one I created myself, to be sure that it isn't an effect caused by thumbnail generation.
Comment 4 Andi Clemens 2009-09-11 00:02:22 UTC
I can confirm this....
Comment 5 Mikolaj Machowski 2009-09-12 00:39:06 UTC
"thumbnails are very important source of information and should be as accurate
as possible"

True but on the other hand drawing borders "inside" of image means thumbnail will be less minimized and details in thumbnail will be bigger. And only small areas near borders are lost, in big majority of photos not containing important informations.
Comment 6 Johannes Tögel 2009-09-12 07:52:43 UTC
"True but on the other hand drawing borders "inside" of image means thumbnail
will be less minimized and details in thumbnail will be bigger. And only small
areas near borders are lost, in big majority of photos not containing important
informations."

No. There is so much whitespace around the thumbnails that it would be no problem to keep the current thumbnail size AND draw the borders outside. So (of course depending on the photographers style) some or very much images will profit from this while the rest isn't affected negatively.

Besides that, the real problem is that the "small area" can heavily affect the images' look, this is not the case with a somewhat smaller thumbnail.
Comment 7 Marcel Wiesweg 2009-09-21 19:39:06 UTC
Johannes, your screenshot is from the thumbnail bar. Do you see this bug as well in the main icon view?

If yes, can you please send me this butterfly picture for testing by private mail.
Comment 8 Andi Clemens 2009-09-21 20:38:03 UTC
I can see this bug in thumbbar and iconview...
Comment 9 Marcel Wiesweg 2009-09-21 21:00:04 UTC
Ok I found it. It is the one-pixel "highlighting" frame drawn in ThumbnailLoadThread::slotThumbnailLoaded.
I would not like to remove this border, it has been in the digikam icon view for ages.
The solution would be to load thumbnails always 2 pixels smaller and add the frame.
Comment 10 Marcel Wiesweg 2009-09-25 21:18:40 UTC
SVN commit 1028073 by mwiesweg:

Do not cut off a one-pixel line at each side, but instead load the thumbnail 2 pixels smaller
and add these by drawing the lines afterwards.

BUG: 206666

 M  +3 -1      NEWS  
 M  +14 -4     libs/threadimageio/thumbnailloadthread.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1028073