Do not cut off a one-pixel line at each side, but instead load the thumbnail 2 pixels smaller and add these by drawing the lines afterwards.

BUG: 206666

svn path=/trunk/extragear/graphics/digikam/; revision=1028073